# easy-llm-evals

./: .env.example  README.md  RESTORE_SUMMARY.md  __init__.py  __main__.py  browsecomp_eval.py  drop_eval.py  gpqa_eval.py  healthbench_eval.py  humaneval_eval.py  math_eval.py  mgsm_eval.py  mmlu_eval.py  pyproject.toml  simpleqa_eval.py  types_eval.py
sampler/: __init__.py  chat_completion_sampler.py  claude_sampler.py  ensemble_grader_sampler.py  gemini_sampler.py  o_chat_completion_sampler.py  ollama_sampler.py  responses_sampler.py
scripts/: justfile
